<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/head1"
        style="@style/Header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_125"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc2"
        style="@style/Desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10"
        android:text="@string/desc3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerName"
        style="@style/containerPrimary"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/padding_15"
        app:boxCornerRadiusBottomStart="@dimen/padding_15"
        app:boxCornerRadiusTopEnd="@dimen/padding_15"
        app:boxCornerRadiusTopStart="@dimen/padding_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rvName"
            style="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmail"
        style="@style/containerPrimary2"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/padding_15"
        app:boxCornerRadiusBottomStart="@dimen/padding_15"
        app:boxCornerRadiusTopEnd="@dimen/padding_15"
        app:boxCornerRadiusTopStart="@dimen/padding_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rvEmail"
            style="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerPhone"
        style="@style/containerPrimary2"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/padding_15"
        app:boxCornerRadiusBottomStart="@dimen/padding_15"
        app:boxCornerRadiusTopEnd="@dimen/padding_15"
        app:boxCornerRadiusTopStart="@dimen/padding_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rvPhone"
            style="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerPassword"
        style="@style/containerPrimary2"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/padding_15"
        app:boxCornerRadiusBottomStart="@dimen/padding_15"
        app:boxCornerRadiusTopEnd="@dimen/padding_15"
        app:boxCornerRadiusTopStart="@dimen/padding_15"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rvPassword"
            style="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignup"
        style="@style/ButtonPrimary"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="@dimen/padding_100"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerPassword" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:layout_marginStart="@dimen/padding_125"
        android:text="@string/have"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

    <TextView
        android:id="@+id/textViewSignin"
        style="@style/Header2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>